# oauth

./: .env  .gitignore  ACTUATOR_README.md  DEBUG_README.md  Dockerfile  Makefile  README.md  api-docs.json  architecture.md  build.gradle  classes.asta  docker-compose.yml  dockerfile  mvnw  oauth.postman_collection.json  package-lock.json  package.json  pom.xml  pyproject.toml  tsconfig.json
app/: main.py
app/auth/: controller.py  schema.py  service.py
app/core/: config.py  errors.py
app/keycloak/: service.py
app/roles/: controller.py  schema.py  service.py
app/users/: controller.py  schema.py  service.py
keycloak/: Dockerfile
server/: .env  Dockerfile  pom.xml
server/src/main/resources/: .env  application.properties  oauth-service.json  realm-export.json
src/: app.ts  index.ts  swagger.ts
src/config/: keycloak.ts
src/controllers/: auth.controller.ts  roles.controller.ts  users.controller.ts  validate.controller.ts
src/health/: healthChecker.ts
src/main/java/config/: KeycloakConfig.java
src/main/java/controller/: AuthController.java  UserController.java
src/main/java/dto/: LoginRequest.java  LoginResponse.java  PasswordUpdateDTO.java  UserDTO.java
src/main/java/errors/: OAuthError.java
src/main/java/service/: KeycloakAuthService.java  (+1 more)
src/main/resources/: .env  application.properties  application.yaml  application.yml
src/middlewares/: error.middleware.ts
src/resources/: application.yml
src/routes/: actuator.routes.ts  auth.routes.ts  roles.routes.ts  users.routes.ts  validate.routes.ts
src/utils/: error.util.ts
(+366 files in other folders)
