[tool.poetry]
name = "oauth-api"
version = "1.0.0"
description = "A FastAPI backend project using Keycloak for authentication"
authors = ["Filipe Giroleti <filipe.fuentes@edu.pucrs.br>", "Matheus Melo"] # add os nomes de vcs aqui
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
pydantic-settings = "^2.9.0"
pydantic = {extras = ["email"], version = "^2.6.4"}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.2.0"
mypy = "^1.9.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
